<resources>
    <string name="app_name">CollegeCooks</string>
    <string name="welcomeScreenButton">Try out the app here</string>
    <string name="welcome">Welcome to</string>
    <string name="ingredientsStr">Ingredients</string>
    <string name="ingredientsButton">+</string>
    <string name="recipesStr">Recipes</string>
    <string name="logoStr">College Cooks Logo</string>
    <string name="recipesButton">Recipes</string>
    <string name="title_activity_recipe_view">RecipeView</string>
    <string name="recipeNameStr">Recipe Name:</string>
    <string name="recipeNameInputStr">Input your recipe name here</string>
    <string name="recipeTimeStr">Time It Takes:</string>
    <string name="recipeTimeInputStr">Input time it takes to prepare here</string>
    <string name="recipeDirectionsStr">Directions:</string>
    <string name="recipeDirectionsInputStr">Input the directions for the recipe here</string>

    <string name="cb1">Black Beans</string>
    <string name="recipesTitleStr">Recipes</string>
    <string name="getRecipesButtonStr">Get Recipes</string>
    <string name="appLogoStr">app logo</string>
    <string name="logoDescriptionStr">College Cooks App Logo</string>
    <string name="input_recipe_directions">Input Recipe Directions</string>
    <string name="input_recipe_time_in_minutes">Input Recipe Time (in minutes)</string>
    <string name="input_appliances_needed">Input Appliances Needed</string>
    <string name="appliances">Appliances:</string>
    <string name="welcome_to">Welcome to</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="appliancess">Appliances</string>
    <string name="directions_placeholder">Directions PLACEHOLDER
        DirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionssDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionssDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionssDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionssDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirectionsDirections
    </string>
    <string name="submitRecipeStr">Submit</string>
    <string name="recipeIngredientsStr">Ingredients:</string>
    <string name="denomination">ex. 3</string>
    <string name="measure">ex. cups</string>
    <string name="name">name</string>

</resources>
