<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:weightSum="100">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="70"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="70"
                android:text="@string/title"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/image_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="70"
                android:text="@string/time"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/image_description"
                app:layout_constraintTop_toBottomOf="@id/image_description" />

            <TextView
                android:id="@+id/image_appliance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="70"
                android:text="@string/appliancess"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/image_description"
                app:layout_constraintTop_toBottomOf="@id/image_time" />

            <TextView
                android:id="@+id/image_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="70"
                android:text="@string/directions_placeholder"
                android:textColor="#000"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/image_description"
                app:layout_constraintTop_toBottomOf="@id/image_appliance" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>