<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInput">

    <LinearLayout
        android:id="@+id/verticalAll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipeNameStr"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/verticalAll"
                app:layout_constraintTop_toTopOf="@id/verticalAll" />

            <EditText
                android:id="@+id/recipeNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/recipeNameInputStr"
                android:inputType="textLongMessage|textMultiLine|text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/nameText"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/verticalAll"
            app:layout_constraintTop_toBottomOf="@id/directions">

            <TextView
                android:id="@+id/recipeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipeTimeStr"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@id/verticalAll"
                app:layout_constraintTop_toBottomOf="@id/directions" />

            <EditText
                android:id="@+id/recipeTimeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_recipe_time_in_minutes"
                android:inputType="numberSigned"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/recipeTime"
                app:layout_constraintTop_toBottomOf="@id/directions"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipeDirections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipeDirectionsStr"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/verticalAll"
                app:layout_constraintTop_toBottomOf="@id/time" />

            <EditText
                android:id="@+id/recipeDirectionsInput"
                android:layout_width="257dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_recipe_directions"
                android:inputType="textLongMessage|textMultiLine|text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintStart_toEndOf="@+id/recipeDirections"
                app:layout_constraintTop_toTopOf="@id/verticalAll"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/appliances"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipeAppliances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appliances"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/verticalAll"
                app:layout_constraintTop_toBottomOf="@id/directions" />

            <EditText
                android:id="@+id/recipeAppliancesInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_appliances_needed"
                android:inputType="textLongMessage|textMultiLine|text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintStart_toEndOf="@+id/recipeDirections"
                app:layout_constraintTop_toTopOf="@id/verticalAll"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/recipeAppliances2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/appliances"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/verticalAll"
                app:layout_constraintTop_toBottomOf="@id/directions" />

            <EditText
                android:id="@+id/recipeAppliancesInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/input_appliances_needed"
                android:inputType="textLongMessage|textMultiLine|text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintStart_toEndOf="@+id/recipeDirections"
                app:layout_constraintTop_toTopOf="@id/verticalAll"
                tools:targetApi="o" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/recipeIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipeIngredientsStr"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/verticalAll"
                app:layout_constraintTop_toBottomOf="@id/directions" />

            <EditText
                android:id="@+id/recipeIngredNameInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textLongMessage|textMultiLine|text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintStart_toEndOf="@+id/recipeDirections"
                app:layout_constraintTop_toTopOf="@id/verticalAll"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/recipeDenomInput"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/denomination"
                android:inputType="number|numberDecimal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintStart_toEndOf="@+id/recipeDirections"
                app:layout_constraintTop_toTopOf="@id/verticalAll"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/recipeMeasureInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/measure"
                android:inputType="textLongMessage|textMultiLine|text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/verticalAll"
                app:layout_constraintStart_toEndOf="@+id/recipeDirections"
                app:layout_constraintTop_toTopOf="@id/verticalAll"
                tools:targetApi="o" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/submitRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:background="#0099FF"
        android:text="@string/submitRecipeStr"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>