<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeView">

    <LinearLayout
        android:id="@+id/horizontalRecipeStr"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="start|top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/horizontalRecipes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/recipeText"
            android:layout_width="257dp"
            android:layout_height="wrap_content"
            android:text="@string/recipesStr"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="690dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="42dp"
        android:layout_marginRight="42dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipesList"
                android:layout_width="370dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:scrollbars="vertical" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/horizontalRecipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="bottom|start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/IngredientBottom"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="toIngredients"
            android:text="@string/ingredientsStr"
            android:textSize="22sp" />

        <Button
            android:id="@+id/recipesButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="toRecipes"
            android:text="@string/recipesButton"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="317dp"
            tools:layout_editor_absoluteY="125dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>